Updating README.md

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Sprinkle of Joy</title>
+    <title>Sprinkles of Joy</title>
     <link rel="stylesheet" href="./styles/main.css">
 </head>
 
@@ -12,6 +12,7 @@
         <header>
             <nav class="navContainer">
                 <img src="./images/logo_200x200.png" alt="sprinkle of joy logo">
+                <h1>Baking happiness since 1997</h1>
                 <ul class="navigation">
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
